# Intro_to_Graphics_Coursework

./: .gitignore  .gitmodules  README.txt
GFX_Submission/: GFX_Submission.sln
GFX_Submission/GFX_Submission/: AVI.h  GFX_Submission.vcxproj  GFX_Submission.vcxproj.filters  blur.frag  cubemap.cpp  cubemap.h  dissolved.frag  effect.h  environment_map.vert  frame_buffer.h  geometry.h  lit_texture.frag  main.cpp  material.h  multi_light.frag  point_sprite.cpp  scene2.json  scene_3.json  scharredge.frag  skybox.cpp  skybox.h  starfield.vert  texture.cpp  transform.h
intro_to_gl/: CMakeLists.txt
intro_to_gl/assets/scenes/: scene.json  scene_3.json  scene_4.json
intro_to_gl/assets/shaders/: Greyscale.frag  Motion_blur.frag  edge.frag  lit_blended.vert  post_process.frag  sharpen.frag  starfield.frag
intro_to_gl/framework/: CMakeLists.txt
intro_to_gl/include/: camera.h  cubemap.h  geometry.h  material.h  post_process.h  render_object.h  texture.h  transform.h  util.h
intro_to_gl/practicals/02_Mark/: effect.h  geometry.cpp  main.cpp  point_sprite.h  texture.cpp  util.cpp  util.h
intro_to_gl/source/: camera.cpp  cubemap.cpp  main.cpp  post_process.cpp  scene.cpp  skybox.cpp  texture.cpp  util.cpp
